FE/fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fe-deploy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fe-deploy
    spec:
      containers:
      - name: fe-app
        image: hyesushim/dododocs-fe:latest
        ports:
            - containerPort: 3000
