FE/fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-service
  labels:
    app.kubernetes.io/name: fe-deploy
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app.kubernetes.io/name: fe-deploy
